-------------------------------------
	4.1-8	
-------------------------------------
Fixed bug that would error out when creating a VM without a boot
disk.
http://code.google.com/p/phpvirtualbox/issues/detail?id=482

Fixed bug that would cause the progress bar to hang when
performing progress operations in some cases.
http://code.google.com/p/phpvirtualbox/issues/detail?id=495

-------------------------------------
	4.1-7	2012-01-17
-------------------------------------
Fixed bug that would not properly set the Use host I/O cache
and Enable Page Fusion settings.

Added Windows 8 OS icons.

Cleaned up Wizard code.

Removed unused images from source tree.

-------------------------------------
	4.1-6.1	2012-01-03
-------------------------------------
Fixed bug for IE 8 that would prevent the Global Preferences
dialog from opening.

-------------------------------------
	4.1-6	2012-01-02
-------------------------------------
Added $startStopConfig to config.php-example

Added Traditional Chinese (zh_tw) translation.

Fixed bug that would not allow the mounting of media when its
path or file name contains a quote.
http://code.google.com/p/phpvirtualbox/issues/detail?id=474

-------------------------------------
	4.1-5	2011-11-15
-------------------------------------
Fixed bug that would not set Acceleration options for a VM if the
$enableAdvancedConfig option was not set in config.php
http://code.google.com/p/phpvirtualbox/issues/detail?id=438

Added OpenMediaVault authentication module.

Added option to set VM startup mode and associated config option
in config.php. Use vboxinit script in phpVirtualBox's root folder.

Fixed a bug in IE 8 that would cause the "Loading ..." screen to
stay in place after login.
http://code.google.com/p/phpvirtualbox/issues/detail?id=455

Added $enableGuestAdditionsVersionDisplay setting and associated
functionality to display guest additions version of a running
VM on its Details tab.